[JENKINS-45047] Migrate from PCT `org.jenkins.tools.test.hook.TransformPom` to HPI plugin `overrideWar`